[package]
name = "qarray_rust_core"
version = "1.2.1"
edition = "2021"

[lib]
name = "qarray_rust_core"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.15.6"
numpy = "0.20.0"
itertools = "0.12.0"
rayon = "1.10.0"
osqp = "0.6.2"
cached= "0.49.2"

[dependencies.pyo3]
version = "0.20.0"
features = ["extension-module"]

[profile.release]
codegen-units = 1
lto = true