[package]
name = "qarray_rust_core"
version = "1.3.1"
edition = "2021"

[lib]
name = "qarray_rust_core"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.16.1"
numpy = "0.23.0"
rayon = "1.10.0"
osqp = "0.6.2"
pyo3 = { version = "0.23.3", features = ["extension-module"] }

[profile.release]
codegen-units = 1
lto = true