[package]
name = "qarray_rust_core"
version = "1.6.0"
edition = "2021"

[lib]
name = "qarray_rust_core"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.16.1"
numpy = "0.24.0"
rayon = "1.10.0"
osqp = "1.0.0"
pyo3 = { version = "0.24.1", features = ["extension-module"] }

[profile.release]
codegen-units = 1
lto = true