[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"
license = "MIT"
license-file = "LICENSE.md"

[project]
name = "qarray_rust_core"
requires-python = ">=3.10"
authors = [
    {name = 'Barnaby van Straaten', email = 'barnaby.vanstraaten@kellogg.ox.ac.uk'}
]

operating-systems = ["any"]

classifiers = [
    "Topic :: Scientific/Engineering :: Physics",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Homepage = 'https://github.com/b-vanstraaten/qarray-rust-core'



[tool.maturin]
features = ["pyo3/extension-module"]

