[build-system]
requires = ["maturin>=0.18,<0.19"]
build-backend = "maturin"
license = "GNU"
license-file = "LICENSE.md"

[project]
name = "qarray_rust_core"
requires-python = ">=3.10"
dynamic = ["version"]
authors = [
    {name = 'Barnaby van Straaten', email = 'b.l.vanstraaten@tudelft.nl'}
]

operating-systems = ["any"]

classifiers = [
    "Topic :: Scientific/Engineering :: Physics",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Homepage = 'https://github.com/b-vanstraaten/qarray-rust-core'

[tool.maturin]
features = ["pyo3/extension-module"]

